# ZOE

./: .gitignore  CMakeLists.txt  README.md  ZOE.cpp  gpuModule.cpp  gpuModule.hpp  ioBridge.cpp  ioModule.cpp  ioModule.hpp  memoryModule.cpp  memoryModule.hpp
The Emulator/: The Emulator.cpp  The Emulator.sln  gpuModule.cpp  gpuModule.hpp  ioBridge.cpp  ioBridge.hpp  ioModule.cpp  ioModule.hpp  memoryModule.cpp  memoryModule.hpp
The Emulator/OS/: default.os
The Emulator/gpuCharacters/: 43.gpu  49.gpu
The Emulator/ioDisk/: 2.io
The Emulator/x64/Debug/OS/: default.os
The Emulator/x64/Release/OS/: default.os
The Emulator/x64/Release/ioDisk/: 0.io  1.io
z80-suzukiplan/: z80.hpp
